--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         
     </div> 
-    <footer>chandu bro aap ke liye</a></footer> 
+    <footer>Powered by Aakash</a></footer> 
      
    
 </body>
